force-app/main/default/objects/Leave__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>CC</label>
    <type>TextArea</type>
</CustomField>