force-app/main/default/objects/Leave__c/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <label>Contact Details</label>
    <type>Phone</type>
</CustomField>