force-app/main/default/objects/Leave__c/fields/Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Leave_Days__c</fullName>
    <formula>To_Date__c - From_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>