force-app/main/default/objects/Leave__c/fields/Leave_type__c.field-meta.xml
<CustomField>
    <fullName>Leave_type__c</fullName>
    <label>Leave type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>