force-app/main/default/objects/Leave__c/fields/Multi_Select_Employee__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Select Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leaves (Multi Select Employee)</relationshipLabel>
    <relationshipName>Leaves1</relationshipName>
    <type>Lookup</type>
</CustomField>