force-app/main/default/objects/Leave__c/fields/Multi_Select_Staff__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Select Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Leaves (Multi Select Staff)</relationshipLabel>
    <relationshipName>Leaves1</relationshipName>
    <type>Lookup</type>
</CustomField>