force-app/main/default/objects/Leave__c/fields/Multi_Select_Student__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Select Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Leaves (Multi Select Student)</relationshipLabel>
    <relationshipName>Leaves1</relationshipName>
    <type>Lookup</type>
</CustomField>