force-app/main/default/objects/Leave__c/fields/Multi_Select_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Select Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Leaves (Multi Select Teacher)</relationshipLabel>
    <relationshipName>Leaves1</relationshipName>
    <type>Lookup</type>
</CustomField>