force-app/main/default/objects/Leave__c/fields/Sessions__c.field-meta.xml
<CustomField>
    <fullName>Sessions__c</fullName>
    <label>Sessions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After Lunch Break</fullName>
            </value>
            <value>
                <fullName>Before Lunch Break</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>