force-app/main/default/objects/Leave__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Leaves</relationshipLabel>
    <relationshipName>Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>