force-app/main/default/objects/Leave__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Leaves</relationshipLabel>
    <relationshipName>Leaves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>