force-app/main/default/objects/Leave__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Leaves</relationshipLabel>
    <relationshipName>Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>